--- a/WebApp/Views/Shared/_AdminLayout.cshtml
+++ b/WebApp/Views/Shared/_AdminLayout.cshtml
@@ -18,7 +18,7 @@
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <link href="~/lib/assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- CSS Files -->
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.13.1/datatables.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.13.1/b-2.3.3/b-colvis-2.3.3/b-html5-2.3.3/datatables.min.css" />
   <link id="pagestyle" href="~/lib/assets/css/argon-dashboard.css?v=2.0.4" rel="stylesheet" />
 </head>
 
@@ -106,11 +106,30 @@
   <script src="~/lib/jquery/dist/jquery.min.js"></script>
   <script src="~/lib/assets/js/core/popper.min.js"></script>
   <script src="~/lib/assets/js/core/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.13.1/b-2.3.3/b-colvis-2.3.3/datatables.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.13.1/b-2.3.3/b-colvis-2.3.3/b-html5-2.3.3/datatables.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="~/lib/assets/js/plugins/perfect-scrollbar.min.js"></script>
   <script src="~/lib/assets/js/plugins/smooth-scrollbar.min.js"></script>
   <script src="~/lib/assets/js/plugins/chartjs.min.js"></script>
   <script src="~/js/department.js"></script>
+
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
+    <figure class="highcharts-figure">
+        <div id="container"></div>
+        <p class="highcharts-description">
+            Pie charts are very popular for showing a compact overview of a
+            composition or comparison. While they can be harder to read than
+            column charts, they remain a popular choice for small datasets.
+        </p>
+    </figure>
+
+  <script src="~/js/chart.js"></script>
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
